Fix dark mode on API levels 29-32
They don't seem to support media queries and need to have "algorithmic darkening" disabled so we can use HTML classes without getting black-on-black text.

--- a/app/src/main/res/raw/defn.css
+++ b/app/src/main/res/raw/defn.css
@@ -12,10 +12,27 @@ a, a:visited {
   text-decoration-style: dotted;
 }
 
-.light i {
+i {
     color: #060;
+}
+
+/* These get used for dark mode in API levels 29-32. */
+
+.dark {
+    color: #eee;
 }
 
 .dark i {
     color: #cec;
+}
+
+/* These get used for dark mode in API levels 33+. */
+
+@media (prefers-color-scheme: dark) {
+    body {
+        color: #eee;
+    }
+    i {
+        color: #cec;
+    }
 }
